# multichannel-awg

./: .clang-format  .gitignore  CMakeLists.txt  README.md
example_data/: example_sequence.json
include/multichannel_awg/: host_awg.hpp  multichannel_awg.hpp  rfnoc_awg.hpp
include/quadchannel_awg/: host_awg.hpp  quadchannel_awg.hpp  sequence.hpp
src/: CMakeLists.txt  awg_base.cc  host_awg.cc  json_helpers.cc  main.cc  multichannel_awg.cc  quadchannel_awg.cc  rfnoc_awg.cc  sequencer.cc
tools/: generate_chirps.py  generatechirps.grc
